--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://pt01.mul-pay.jp/ext/js/token.js"></script>
 </head>
 <body>
   <app-root></app-root>
